2014-09-10  James Pallister  <james.pallister@embecosm.com>
	Added the clc and sec AVR instructions.

	* superopt.c (output_assembly): Added assembly output for the above
	* synth.def: Added calls to the above instructions.

2014-09-08  James Pallister  <james.pallister@embecosm.com>
	Added the ror, rol, asr and lsr AVR instructions

	* superopt.c (output_assembly): Added assembly output for the above
	* synth.def: Added calls to the above instructions.

2014-09-08  James Pallister  <james.pallister@embecosm.com>
	Made the hashtable usage conditional on DO_HASHTABLE

	* superopt.c: Added the DO_HASHTABLE preprocessor defined, to decide
	whether to use the hashtable speed up or not

2014-09-05  James Pallister  <james.pallister@embecosm.com>
	Added more instructions to the AVR port: dec, sbc, clr, ser, cpc

	* superopt.c (output_assembly): Added assembly output for the above
	instrucitons.
	* synth.def: Synth the above instructions.

2014-09-05  James Pallister  <james.pallister@embecosm.com>
	Added the compare with carry instruction definition (cmpc), and updated
	cmp to work with other bit widths.

	* insn.def: Added CMPC instruction.
	* run_program.def: Added a case to execute the CMPC instruction.
	* superopt.h: Added CMPC and modified CMP to compute the carry for all bit
	widths.

2014-08-29  James Pallister  <james.pallister@embecosm.com>
	Small bug fix in the pruning method.

	* superopt.c (recurse): Use the accepted heuristic counter instead of
	total success count, since we are only considering the possible
	correctness of the one set of input values, not all.

2014-08-29  James Pallister  <james.pallister@embecosm.com>

	Added a new pruning method. This method records the state of the registers
	and carry if no solutions are found after recursing. Before subsequent
	calls to synth this hash table is checked. If the current registers and
	carry are in the table, and the allowed cost is lower or equal to the